@@ -5,7 +5,8 @@ bindir = $(EBIN)
 bin_PROGRAMS = E-Load.epplet E-Clock.epplet E-Time.epplet E-Net.epplet \
 E-Cpu.epplet EppletTest.epplet E-Biff.epplet E-Power.epplet Emix.epplet \
 E-MemWatch.epplet E-Disk.epplet E-Areas.epplet EppletConfigTest.epplet \
-E-NetFlame.epplet E-Sys.epplet E-ScreenShoot.epplet E-Slides.epplet
+E-NetFlame.epplet E-Sys.epplet E-ScreenShoot.epplet E-Slides.epplet \
+E-Xss.epplet
 
 E_Load_epplet_SOURCES = E-Load.c
 E_Load_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
@@ -66,6 +67,10 @@ E_Sys_epplet_LDFLAGS = -rpath $(libdir):$(pkglibdir)
 E_Slides_epplet_SOURCES = E-Slides.c
 E_Slides_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
 E_Slides_epplet_LDFLAGS = -rpath $(libdir):$(pkglibdir)
+
+E_Xss_epplet_SOURCES = E-Xss.c
+E_Xss_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
+E_Xss_epplet_LDFLAGS = -rpath $(libdir):$(pkglibdir)
 
 Emix_epplet_SOURCES = Emix.c
 Emix_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
